# NES-Porting-Toolkit

./: .gitignore  Cargo.toml  README.md
.github/: AGENTS.md
.github/workflows/: ci.yml
crates/nptk/: Cargo.toml
crates/nptk-app/: Cargo.toml
crates/nptk-app/src/: lib.rs
crates/nptk-audio/: Cargo.toml
crates/nptk-audio/src/: apu_mixer.rs  audio_policy.rs  cpal_output.rs  kira_engine.rs  kira_events.rs  lib.rs
crates/nptk-core/: Cargo.toml
crates/nptk-core/src/: bus.rs  controller.rs  lib.rs  system.rs
crates/nptk-core/src/apu_compat/: mod.rs
crates/nptk-core/src/cpu_ref/: mod.rs
crates/nptk-core/src/mapper/: address_mapper.rs  audio.rs  cartridge.rs  context.rs  event_sink.rs  map_result.rs  mapper_chip.rs  mod.rs  nrom.rs  registry.rs  types.rs
crates/nptk-core/src/ppu_compat/: mod.rs
crates/nptk-core/src/rom/: mod.rs  parser.rs  types.rs
crates/nptk-core/tests/: integration.rs
crates/nptk-debug-ui/: Cargo.toml
crates/nptk-debug-ui/src/: debug_data.rs  fltk_ui.rs  lib.rs
crates/nptk-input/: Cargo.toml
crates/nptk-input/src/: backend.rs  canonical.rs  hotplug.rs  lib.rs  mapper.rs  nes_controller.rs  replay.rs
crates/nptk-input/src/backends/: gilrs_gamepad.rs  hidapi_generic.rs  winit_keyboard.rs
crates/nptk-input/tests/: replay_integration.rs
crates/nptk-mapper/: Cargo.toml
crates/nptk-mapper/src/: lib.rs
crates/nptk-native-runtime/: Cargo.toml
crates/nptk-native-runtime/src/: audio_bridge.rs  input_bridge.rs  lib.rs  ppu_bridge.rs  runtime.rs  state_bridge.rs
crates/nptk-profile/: Cargo.toml
crates/nptk-profile/src/: hooks.rs  lib.rs  profile.rs  symbols.rs  validation.rs
crates/nptk-recompiler/: Cargo.toml
crates/nptk-recompiler/src/: analysis.rs  aot_link.rs  cfg.rs  codegen.rs  disasm.rs  ir6502.rs  ir_builder.rs  lib.rs  manifest.rs
crates/nptk-tools/: Cargo.toml
crates/nptk-tools/src/: config.rs  lib.rs
crates/nptk-verify/: Cargo.toml
crates/nptk-verify/src/: compare.rs  lib.rs  report.rs  tetanes_runner.rs  tri_compare.rs
crates/nptk-verify/src/nes_test/: blargg.rs  mod.rs  nestest.rs
crates/nptk-wgpu/: Cargo.toml
crates/nptk-wgpu/src/: debug_ui.rs  lib.rs  palette.rs  renderer.rs  sprite.rs  tilemap.rs
crates/nptk-wgpu/src/shaders/: framebuffer.wgsl  sprite.wgsl  tilemap.wgsl
crates/nptk/src/: lib.rs
docs/: DEVELOPMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  INPUT_BACKENDS.md  LEGAL.md  MAPPER_IMPLEMENTATION.md  PROFILE_FORMAT.md  RECOMPILER.md  RUNTIME_ABI.md  mapper.md  plan.md
games/battle-city/: Cargo.toml  build.rs
games/battle-city/src/: battle_city_runtime.rs  game_state.rs  lib.rs  main.rs  native_hooks.rs  nes_blocks.rs
mappers/cnrom/: Cargo.toml
mappers/cnrom/src/: lib.rs
mappers/nrom/: Cargo.toml
mappers/nrom/src/: lib.rs
mappers/uxrom/: Cargo.toml
mappers/uxrom/src/: lib.rs
profiles/battle_city/: README.md  hooks.ron  input.ron  profile.toml  ram_map.ron  symbols.ron  tests.ron
profiles/donkey_kong/: profile.toml
roms/: README.md
