[package]
name = "nptk-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
cpal.workspace = true
gilrs.workspace = true
nptk-core = { path = "../nptk-core" }
nptk-native-runtime = { path = "../nptk-native-runtime" }
nptk-wgpu = { path = "../nptk-wgpu" }
nptk-audio = { path = "../nptk-audio" }
nptk-input = { path = "../nptk-input" }
