[package]
name = "nptk-native-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytemuck.workspace = true
nptk-core = { path = "../nptk-core" }
nptk-profile = { path = "../nptk-profile" }

[dev-dependencies]
nptk-recompiler = { path = "../nptk-recompiler" }
nptk-mapper = { path = "../nptk-mapper" }
