[package]
name = "nptk-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
bytemuck.workspace = true
image.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
ron.workspace = true
serde.workspace = true
nptk-core = { path = "../nptk-core" }
nptk-native-runtime = { path = "../nptk-native-runtime" }
nptk-input = { path = "../nptk-input" }
nptk-debug-ui = { path = "../nptk-debug-ui" }
