[package]
name = "nptk-battle-city"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "battle-city"
path = "src/main.rs"

[lib]
name = "nptk_battle_city"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
tracing.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
cpal.workspace = true
gilrs.workspace = true
nptk-core = { path = "../../crates/nptk-core" }
nptk-profile = { path = "../../crates/nptk-profile" }
nptk-native-runtime = { path = "../../crates/nptk-native-runtime" }
nptk-wgpu = { path = "../../crates/nptk-wgpu" }
nptk-audio = { path = "../../crates/nptk-audio" }
nptk-input = { path = "../../crates/nptk-input" }

[build-dependencies]
nptk-core = { path = "../../crates/nptk-core" }
nptk-recompiler = { path = "../../crates/nptk-recompiler" }
