[package]
name = "nptk-battle-city"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "battle-city"
path = "src/main.rs"

[lib]
name = "nptk_battle_city"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
tracing.workspace = true
nptk = { path = "../../crates/nptk" }

[build-dependencies]
cc.workspace = true
nptk = { path = "../../crates/nptk", features = ["build"] }
